
add_executable(raptor
        anims.cpp
        anims.h
        bonus.cpp
        bonus.h
        cards.h
        common.h
        demo.cpp
        demo.h
        dspapi.cpp
        dspapi.h
        enemy.cpp
        enemy.h
        eshot.cpp
        eshot.h
        flame.cpp
        flame.h
        fx.cpp
        fx.h
        gfxapi.cpp
        gfxapi.h
        gfxapi_a.cpp
        glbapi.cpp
        glbapi.h
        gssapi.cpp
        gssapi.h
        help.cpp
        help.h
        i_lastscr.cpp
        i_lastscr.h
        i_oplmusic.cpp
        i_oplmusic.h
        i_video.cpp
        i_video.h
        imsapi.cpp
        imsapi.h
        input.cpp
        input.h
        intro.cpp
        intro.h
        joyapi.cpp
        joyapi.h
        kbdapi.cpp
        kbdapi.h
        loadsave.cpp
        loadsave.h
        m_misc.cpp
        m_misc.h
        movia_a.cpp
        movie.cpp
        movie.h
        mpuapi.cpp
        mpuapi.h
        musapi.cpp
        musapi.h
        objects.cpp
        objects.h
        opl3.cpp
        opl3.h
        prefapi.cpp
        prefapi.h
        ptrapi.cpp
        ptrapi.h
        ptrapi_a.cpp
        rap.cpp
        rap.h
        shadow.cpp
        shadow.h
        shots.cpp
        shots.h
        store.cpp
        store.h
        swdapi.cpp
        swdapi.h
        tile.cpp
        tile.h
        tile_a.cpp
        vmemapi.cpp
        vmemapi.h
        windows.cpp
        windows.h
        )

target_link_libraries(raptor
        textscreen
        SDL2::SDL2
        SDL2::SDL2main
        )
